update with success.html file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>User Record List </span>
       </div>
       <div class="formElements">    <!-- "formElements" starts-------- under "formElements" there are 2 div i.e. "inputBox" and "submitBox" -->
-        <form action="backend.php">  <!-- here "backend.php" just an example -->
+        <form >  <!-- here "backend.php" just an example -->
           <div class="inputBox">    <!-- "inputBox" starts-------- under "inputBox" there are 6 div -->
             <div id="userNameBox">  <!-- "userNameBox" starts -->
               <p>Username:-</p>
@@ -85,6 +85,6 @@
     </div>     <!-- "container" ends -->
  
  
-    <script src="/javaScript.js"></script>
+    <script src="./javaScript.js"></script>
   </body>
 </html>
